tests/baselines/reference/parser642331_1(strict=true).errors.txt
parser642331_1.ts(4,18): error TS1213: Identifier expected. 'static' is a reserved word in strict mode. Class definitions are automatically in strict mode.
parser642331_1.ts(4,18): error TS7006: Parameter 'static' implicitly has an 'any' type.


==== parser642331_1.ts (2 errors) ====
    "use strict";
    
    class test {
        constructor (static) { }
                     ~~~~~~
!!! error TS1213: Identifier expected. 'static' is a reserved word in strict mode. Class definitions are automatically in strict mode.
                     ~~~~~~
!!! error TS7006: Parameter 'static' implicitly has an 'any' type.
    }
    